# Gelir-Gider-Uygulamas-cursor

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml
apps/api/: .eslintrc.cjs  jest.config.cjs  package.json  tsconfig.build.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  main.ts
apps/api/src/common/decorators/: current-user.decorator.ts
apps/api/src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/api/src/modules/classification/: classification.module.ts  classification.service.spec.ts  classification.service.ts
apps/api/src/modules/notifications/: email.provider.ts  notification-settings.controller.ts  notification-settings.service.ts  notifications.module.ts  notifications.service.ts
apps/api/src/modules/transactions/: transactions.controller.ts  transactions.module.ts  transactions.service.ts
apps/api/src/prisma/: prisma.service.ts
apps/api/src/shared/: types.ts
apps/api/test/: app.e2e-spec.ts
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/components/: ManualTransactionForm.tsx  PdfUpload.tsx  RecurringPaymentsCard.tsx  StatCard.spec.tsx  StatCard.tsx  SuggestionsList.tsx  TopCategoriesCard.tsx  TransactionFilters.tsx  TransactionTable.tsx  TrendSparkline.tsx
apps/web/lib/: api.ts
apps/web/store/: useAuthStore.ts
apps/web/types/: dashboard.ts
services/pdf-parser/: README.md  pyproject.toml
services/pdf-parser/app/: main.py
(+14 files in other folders)
